packages/wasm/ballerina-lang-go/parser/testdata/tokens/javainterop/negative/method_not_found4.token
(import 6 0x00 ())
(ident, "ballerina" 9 0x00 ())
(/ 1 0x00 ())
(ident, "jballerina" 10 0x00 ())
(. 1 0x00 ())
(ident, "java" 4 0x00 ())
(; 1 0x00 ())
(public 6 0x00 ())
(function 8 0x00 ())
(ident, "interopWithAnyReturn" 20 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(boolean 7 0x00 ())
({ 1 0x00 ())
(var 3 0x00 ())
(ident, "a" 1 0x00 ())
(= 1 0x00 ())
(ident, "acceptIntAnyReturn" 18 0x00 ())
(( 1 0x00 ())
(int, "1" 1 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(if 2 0x00 ())
(( 1 0x00 ())
(! 1 0x00 ())
(( 1 0x00 ())
(ident, "a" 1 0x00 ())
(is 2 0x00 ())
(int 3 0x00 ())
() 1 0x00 ())
() 1 0x00 ())
({ 1 0x00 ())
(return 6 0x00 ())
(false 5 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(var 3 0x00 ())
(ident, "b" 1 0x00 ())
(= 1 0x00 ())
(ident, "acceptIntAnyReturn" 18 0x00 ())
(( 1 0x00 ())
(int, "2" 1 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(if 2 0x00 ())
(( 1 0x00 ())
(! 1 0x00 ())
(( 1 0x00 ())
(ident, "b" 1 0x00 ())
(is 2 0x00 ())
(string 6 0x00 ())
() 1 0x00 ())
() 1 0x00 ())
({ 1 0x00 ())
(return 6 0x00 ())
(false 5 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(var 3 0x00 ())
(ident, "c" 1 0x00 ())
(= 1 0x00 ())
(ident, "acceptIntAnyReturn" 18 0x00 ())
(( 1 0x00 ())
(int, "3" 1 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(if 2 0x00 ())
(( 1 0x00 ())
(! 1 0x00 ())
(( 1 0x00 ())
(ident, "c" 1 0x00 ())
(is 2 0x00 ())
(float 5 0x00 ())
() 1 0x00 ())
() 1 0x00 ())
({ 1 0x00 ())
(return 6 0x00 ())
(false 5 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(var 3 0x00 ())
(ident, "d" 1 0x00 ())
(= 1 0x00 ())
(ident, "acceptIntAnyReturn" 18 0x00 ())
(( 1 0x00 ())
(- 1 0x00 ())
(int, "1" 1 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(if 2 0x00 ())
(( 1 0x00 ())
(! 1 0x00 ())
(( 1 0x00 ())
(ident, "d" 1 0x00 ())
(is 2 0x00 ())
(boolean 7 0x00 ())
() 1 0x00 ())
() 1 0x00 ())
({ 1 0x00 ())
(return 6 0x00 ())
(false 5 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(return 6 0x00 ())
(true 4 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(public 6 0x00 ())
(function 8 0x00 ())
(ident, "acceptIntAnyReturn" 18 0x00 ())
(( 1 0x00 ())
(int 3 0x00 ())
(ident, "s" 1 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(any 3 0x00 ())
(= 1 0x00 ())
(@ 1 0x00 ())
(ident, "java" 4 0x00 ())
(: 1 0x00 ())
(ident, "Method" 6 0x00 ())
({ 1 0x00 ())
(ident, "'class" 6 0x00 ())
(: 1 0x00 ())
(string, ""org/ballerinalang/nativeimpl/jvm/tests/StaticMethods"" 54 0x00 ())
(, 1 0x00 ())
(ident, "name" 4 0x00 ())
(: 1 0x00 ())
(string, ""acceptIntAndUnionReturn"" 25 0x00 ())
(} 1 0x00 ())
(external 8 0x00 ())
(; 1 0x00 ())
(2 0 0x00 ())
